--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ main {
   line-height: 150px;
   text-align: center;
   font-size: 50px;
+  cursor: pointer;
 }
 .trending__slide:not(:last-child) {
   margin-right: 10px;
@@ -200,6 +201,7 @@ main {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  cursor: pointer;
 }
 .search-results__item {
   height: 150px;
@@ -208,4 +210,33 @@ main {
 }
 .search-results__show-more {
   display: none;
+}
+
+/*---------------увеличение картинки при клике---------------*/
+
+.full-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  z-index: 1001;
+}
+.full-screen__img-container {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.full-screen__close-btn {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  color: #fff;
+  font-weight: bold;
+  top: -10px;
+  right: -10px;
 }
