--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ body {
   background: #555;
   color: #fff;
   font-weight: bold;
+  cursor: pointer;
 }
 .search-results__header {
   display: none;
@@ -130,9 +131,6 @@ main {
 /*---------------trending---------------*/
 .trending {
   margin-bottom: 50px;
-}
-.trending__slider {
-  
 }
 .trending__slider-window {
   overflow: hidden;
@@ -229,6 +227,7 @@ main {
   border: none;
   color: #fff;
   padding: 5px;
+  cursor: pointer;
 }
 
 /*---------------увеличение картинки при клике---------------*/
@@ -261,16 +260,6 @@ main {
   overflow: auto;
   font-weight: bold;
   font-family: Calibri;
-}
-.full-screen__img-wrap {
-/*   position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 0px;
-  height: 0px; */
 }
 .full-screen__close-btn {
   position: absolute;
