--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,11 @@ main {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+.search-results__col {
+  width: 20%;
+  height: 100px;
+  border: 1px solid red;
+}
 .search-results__item {
   height: 150px;
   margin-bottom: 15px;
@@ -253,6 +258,8 @@ main {
   height: 0px;
   border: 1px solid #fff;
   padding: 10px;
+  /* transition: height 0.7s; */
+  /* overflow: hidden; */
 }
 .full-screen__title {
   color: #fff;
@@ -274,4 +281,5 @@ main {
   top: -25px;
   right: -25px;
   cursor: pointer;
+  /* z-index: 1000; */
 }
