--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,11 @@ main {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+.search-results__col {
+  width: 20%;
+  height: 100px;
+  border: 1px solid red;
+}
 .search-results__item {
   height: 150px;
   margin-bottom: 15px;
