--- a/css/style.css
+++ b/css/style.css
@@ -216,14 +216,12 @@ main {
   flex-wrap: wrap;
 }
 .search-results__col {
-  width: 24%;
-  height: 100px;
-  border: 1px solid red;
+  width: 19%;
 }
 .search-results__item {
-  height: 150px;
+  width: 100%;
+  height: auto;
   margin-bottom: 15px;
-  margin-right: 15px;
   cursor: pointer;
 }
 .search-results__show-more {
