--- a/css/style.css
+++ b/css/style.css
@@ -44,62 +44,71 @@ border-spacing: 0;
 }
 /*---------------конец сброса стилей---------------*/
 /*---------общие-----------------------*/
+* {
+  box-sizing: border-box;
+}
 body {
   background: #555;
 }
 .wrapper {
-  width: 1040px;
+  width: 95%;
+  max-width: 1040px;
   margin: 100px auto;
-  box-sizing: border-box;
   background: #bbb;
 }
 .trending__header, .search-results__header {
   font-family: 'Calibri', sans-serif;
-  font-size: 30px;
+  font-size: 2em;
   background: #555;
   color: #fff;
-  margin-bottom: 10px;
-  padding: 5px;
+  margin-bottom: 0.5em;
+  padding: 0.25em;
 }
 /*---------------header---------------*/
 .header {
-  padding: 60px 20px 20px 20px;
-  margin-bottom: 30px;
+  padding: 4em 1.3333em 1.3333em 1.3333em;
+  margin-bottom: 2em;
+  height: 8.45833em;
 }
 .header-wrap {
   display: flex;
   justify-content: space-between;
+  height: 100%;
 }
 .header__logo-link {
   display: block;
   text-decoration: none;
+  width: 13.82%; 
+  height: 100%;
+  background: url(../img/logo.png) no-repeat;
+  background-size: cover;
+  
 }
-.header__logo-img {
-  width: 150px;
-  height: 50px;
-}
+/* .header__logo-img {
+  width: 100%;
+  height: 100%;
+} */
 
 /*---------------форма поиска---------------*/
 .search {
-  width: 800px;
-  height: 50px;
+  width: 76.92307%;
+  height: 100%;
 }
 .search__form {
   font-size: 0;
-  width: 800px;
+  width: 100%;
   display: flex;
   justify-content: flex-end;
-  height: 50px;
-  box-sizing: border-box;
+  height: 100%;
 }
 .search__query-field {
-  width: 700px;
+  width: 86.96610%;
   border: none;
-  padding: 0 15px;
+  padding: 0 1em;
   background: #ddd;
 }
 .search__button {
-  width: 100px;
+  width: 13.0339%;
   border: none;
   background: #555;
   color: #fff;
@@ -111,43 +120,39 @@ body {
 }
 .topWindow {
   position: fixed;
-  top: 5px;
+  top: 0.3125em;
   left: 0;
   right: 0;
   margin: auto;
   z-index: 1000;
-  width: 1000px;
+  height: 3.125em;
+  
   display: flex;
   justify-content: flex-end;
 }
 .topWindow .search__form {
   border: 2px solid #fff;
-  width: 1000px;
-  transition: width 0.7s;
+}
+.topWindow .search__button {
+  width: 9.997%; /*для того, чтобы не менялась ширина при прилипании формы к верху страницы*/
 }
 .topWindow .search__query-field {
-  /* width: 940px; */
-}
-.bgWhite {
-  background: #fff;
-  width: 940px;
-  transition: background-color 0.7s,
-              width 0.7s;
+  width: 90.003%;
 }
 
 /*---------------main---------------*/
 main {
-  padding: 20px;
+  padding: 1.25em;
 }
 /*---------------trending---------------*/
 .trending {
-  margin-bottom: 50px;
+  margin-bottom: 3.125em;
 }
 .trending__slider-window {
   overflow: hidden;
   margin: 0 auto;
   /* width: 100%; */
-  height: 150px;
+  height: 9.375em;
   position: relative;
 }
 .trending__slides {
@@ -159,23 +164,20 @@ main {
   transition: left 0.7s;
 }
 .trending__slide {
-  height: 150px;
-/*   line-height: 150px; */
-  text-align: center;
-  font-size: 50px;
+  height: 9.375em;
   cursor: pointer;
 }
 .trending__slide:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 0.625em;
   
 }
 .trending__btn {
-  font-size: 30px;
+  font-size: 1.875em;
   color: #bbb;
   position: absolute;
-  width: 70px;
-  height: 150px;
-  line-height: 150px;
+  width: 2.33333em;
+  height: 5em;
+  line-height: 5em;
   top: 0;
   z-index: 100;
   text-align: center;
@@ -205,8 +207,8 @@ main {
   bottom: 0;
   right: 0;
   left: 0;
-  width: 30px;
-  height: 30px;
+  width: 1em;
+  height: 1em;
   cursor: pointer;
   transform: rotate(45deg);
 }
@@ -227,12 +229,12 @@ main {
   flex-wrap: wrap;
 }
 .search-results__col {
-  width: 192px;
+  width: 19.2%; /*192/1000*/
 }
 .search-results__item {
   width: 100%;
   height: auto;
-  margin-bottom: 10px;
+  margin-bottom: 0.625em;
   cursor: pointer;
 }
 .search-results__show-more {
@@ -240,7 +242,7 @@ main {
   background: #555;
   border: none;
   color: #fff;
-  padding: 5px;
+  padding: 0.3125em;
   cursor: pointer;
 }
 
@@ -263,32 +265,102 @@ main {
   bottom: 0;
   left: 0;
   right: 0;
-  width: 0px;
-  height: 0px;
+  width: 0;
+  height: 0;
   border: 1px solid #fff;
-  padding: 10px;
+  padding: 0.625em;
+  box-sizing: content-box;
   /* transition: height 0.7s; */
   /* overflow: hidden; */
 }
 .full-screen__title {
   color: #fff;
-  height: 50px;
+  height: 3.125em;
   overflow: auto;
   font-weight: bold;
   font-family: Calibri;
 }
 .full-screen__close-btn {
   position: absolute;
-  width: 25px;
-  height: 25px;
-  line-height: 25px;
+  width: 1.5625em;
+  height: 1.5625em;
+  line-height: 1.5625em;
   text-align: center;
   color: #fff;
   font-weight: bold;
   font-family: Calibri;
-  font-size: 25px;
-  top: -25px;
-  right: -25px;
+  font-size: 1.5625em;
+  top: -1.5625em;
+  right: -1.5625em;
   cursor: pointer;
   /* z-index: 1000; */
+}
+
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .search-results__col--5 {
+    display: none;
+  }
+  .search-results__col {
+    width: 24%; 
+  }
+}
+
+@media (max-width: 767px) {
+  .search-results__col--5, .search-results__col--4 {
+    display: none;
+  }
+  .search-results__col {
+    width: 32.5%; 
+  }
+  .search__button {
+    width: 20%;
+  }
+  .topWindow .search__button {
+    width: 15.331%;
+  }
+  
+}
+
+@media (max-width: 480px) {
+  .header {
+    height: 14.2878em;
+    padding: 1.3333em;
+  }
+  .header-wrap {
+    display: block;
+  }
+  .header__logo-link {
+    width: 100%;
+    height: 40%;
+    background: url(../img/logo1.png) no-repeat;
+    background-size: contain;
+  }
+  .search {
+    width: 100%;
+    height: 60%;
+  }
+  .search__form {
+    display: block;
+  }
+  .search__query-field, .search__button {
+    width: 100%;
+    height: 50%
+  }
+  .topWindow {
+    height: 6.24em;
+  }
+  .topWindow .search__form {
+    display: block;
+  }
+  .topWindow .search__query-field, .topWindow .search__button {
+    width: 100%;
+    height: 50%
+  }
+   .search-results__col--3 {
+    display: none;
+  }
+  .search-results__col {
+    width: 49%; 
+  }
 }
