--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ main {
 .trending__slides {
   display: flex;
   position: absolute;
+  font-size: 0;
   top: 0;
   bottom: 0;
   left: 0;
@@ -232,10 +233,10 @@ main {
 .search-results__container {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
 }
 .search-results__col {
-  width: 19.2%; /*192/1000*/
+  width: 19.5%; /*192/1000*/
+  font-size: 0;
 }
 .search-results__item {
   width: 100%;
@@ -325,7 +326,20 @@ main {
   .topWindow .search__button {
     width: 15.331%;
   }
-  
+  .trending__header {
+    text-align: center;
+    cursor: pointer;
+  }
+  .trending__slider-window {
+    position: static;
+    height: auto;
+  }
+  .trending__slides {
+    position: static;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.7s;
+  }
 }
 
 @media (max-width: 480px) {
@@ -372,6 +386,22 @@ main {
   .topWindow .search__query-field, .topWindow .search__button {
     width: 100%;
     height: 50%
+  }
+  .trending__slides {
+    justify-content: space-between;
+  }
+  .trending__col {
+    width: 49.5%; 
+  }
+  .trending__col--3 {
+    display: none;
+  }
+  .trending__btn {
+    display: none;
+  }
+  .trending__slide {
+    width: 100%;
+    height: auto;
   }
    .search-results__col--3 {
     display: none;
