--- a/css/style.css
+++ b/css/style.css
@@ -314,17 +314,8 @@ main {
 }
 
 @media (max-width: 767px) {
-  .search-results__col--5, .search-results__col--4 {
-    display: none;
-  }
-  .search-results__col {
-    width: 32.5%; 
-  }
-  .search__button {
-    width: 20%;
-  }
-  .topWindow .search__button {
-    width: 15.331%;
+  .trending {
+    margin-bottom: 1em;
   }
   .trending__header {
     text-align: center;
@@ -339,6 +330,24 @@ main {
     height: 0;
     overflow: hidden;
     transition: height 0.7s;
+    justify-content: space-between;
+  }
+  .trending__col, .search-results__col {
+    width: 32.5%; 
+  }
+  .trending__slide {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+  .search-results__col--5, .search-results__col--4 {
+    display: none;
+  }
+  .search__button {
+    width: 20%;
+  }
+  .topWindow .search__button {
+    width: 15.331%;
   }
 }
 
@@ -387,9 +396,9 @@ main {
     width: 100%;
     height: 50%
   }
-  .trending__slides {
+  /* .trending__slides {
     justify-content: space-between;
-  }
+  } */
   .trending__col {
     width: 49.5%; 
   }
@@ -399,11 +408,7 @@ main {
   .trending__btn {
     display: none;
   }
-  .trending__slide {
-    width: 100%;
-    height: auto;
-  }
-   .search-results__col--3 {
+  .search-results__col--3 {
     display: none;
   }
   .search-results__col {
