необходимо реализовать расчет высоты блока трендовых гиф для мобильной версии независимо от прорисовки их браузером. Через соотношение ширины и высоты оригинального изображения

--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ main {
     position: static;
     height: 0;
     overflow: hidden;
-    transition: height 0.7s;
+    transition: height 0.7s linear;
     justify-content: space-between;
     font-size: 0;
   }
