--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ body {
 /*---------------header---------------*/
 .header {
   padding: 4em 1.3333em 1.3333em 1.3333em;
-  margin-bottom: 2em;
   height: 8.45833em;
 }
 .header-wrap {
@@ -88,11 +87,6 @@ body {
   margin-right: 3%;
   
 }
-/* .header__logo-img {
-  width: 100%;
-  height: 100%;
-} */
-
 /*---------------форма поиска---------------*/
 .search {
   width: 76.92307%;
@@ -148,7 +142,7 @@ body {
 
 /*---------------main---------------*/
 main {
-  padding: 1.25em;
+  padding: 0 1.25em;
 }
 /*---------------trending---------------*/
 .trending {
@@ -323,6 +317,7 @@ main {
   }
   .header {
     padding: 1.3333em 0 1em 0;
+    height: 5.45833em;
     margin-bottom: 0;
   }
   .topWindow {
@@ -357,6 +352,9 @@ main {
     transition: height 0.7s linear;
     justify-content: space-between;
     font-size: 0;
+  }
+  .trending__btn {
+    display: none;
   }
   .trending__col, .search-results__col {
     width: 33%; 
