--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,6 @@ main {
 .trending__slider-window {
   overflow: hidden;
   margin: 0 auto;
-  /* width: 100%; */
   height: 9.375em;
   position: relative;
 }
@@ -165,11 +164,11 @@ main {
   transition: left 0.7s;
 }
 .trending__slide {
-  height: 9.375em;
+  height: 100%;
   cursor: pointer;
 }
 .trending__slide:not(:last-child) {
-  margin-right: 0.625em;
+  margin-right: 10px;
   
 }
 .trending__btn {
