--- a/css/style.css
+++ b/css/style.css
@@ -315,17 +315,29 @@ button:focus {
   .wrapper {
     width: 100%;
     margin: 0;
+    padding-top: 1em;
   }
   .main {
     padding: 0;
   }
   .header {
-    padding-top: 1.3333em;
-    height: 5.45833em;
-    margin-bottom: 0;
+    height: 6.51em;
+    margin: 0;
+    box-sizing: content-box;
+  }
+  .header-wrap {
+    display: block;
   }
   .header__logo-link {
-    background-position: center;
+    width: 100%;
+    height: 3.125em;
+    margin-bottom: .26em;
+    background: url(../img/logo1.png) no-repeat center;
+    background-size: contain;
+  }
+  .search {
+    width: 100%;
+    height: 3.125em;
   }
   .topWindow {
     top: 0;
@@ -342,9 +354,10 @@ button:focus {
   }
   .trending__header, .search-results__header {
     text-align: center;
-  }
-  .trending__slider {
-    padding-bottom: 0.49995em;
+    height: 3em;
+    line-height: 3em;
+    margin: 0;
+    font-weight: normal;
   }
   .trending__slider-window {
     position: static;
@@ -390,20 +403,12 @@ button:focus {
 @media (max-width: 480px) {
   .header {
     height: 9em;
-    margin-bottom: 0.4em;
-    box-sizing: content-box;
-  }
-  .header-wrap {
-    display: block;
+    /* margin-bottom: 0.4em; */
   }
   .header__logo-link {
-    width: 100%;
     height: 35%;
-    background: url(../img/logo1.png) no-repeat;
-    background-size: contain;
   }
   .search {
-    width: 100%;
     height: 65%;
   }
   .search__form {
@@ -439,10 +444,10 @@ button:focus {
   .trending__btn {
     display: none;
   }
-  .trending__header, .search-results__header {
+  /* .trending__header, .search-results__header {
     height: 2em;
     line-height: 2em;
-  }
+  } */
   .search-results__col--3 {
     display: none;
   }
