--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ button:focus {
   box-sizing: content-box;
   display: flex;
   justify-content: space-between;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 .search-results__col {
   width: 19.5%;
@@ -285,16 +285,16 @@ button:focus {
 }
 .full-screen__close-btn {
   position: absolute;
-  width: 1.5625em;
-  height: 1.5625em;
-  line-height: 1.5625em;
+  width: 1em;
+  height: 1em;
+  line-height: 1em;
   text-align: center;
   color: #fff;
   font-weight: bold;
   font-family: Calibri;
-  font-size: 1.5625em;
-  top: -1.5625em;
-  right: -1.5625em;
+  font-size: 2em;
+  top: 0;
+  right: 0;
   cursor: pointer;
 }
 
@@ -395,14 +395,10 @@ button:focus {
     height: 3em;
     line-height: 3em;
   }
-  .full-screen__close-btn {
-    width: auto;
-    font-weight: lighter;
-    top: 100%;
-    right: 0;
-    left: 0;
-    margin: auto;
-  }
+  /* .full-screen__close-btn {
+    top: 1.5625em;
+    right: 1.5625em;
+  } */
 }
 
 @media (max-width: 480px) {
